#3: Fix invalid links on logs endpoint (#4)
* #3: Fix invalid links on logs endpoint
* #3: code cleanups

---------

Co-authored-by: frank sommer <frank.sommer@aperto.com>